working with javafx and library-module